--- a/Homework_1.ipynb
+++ b/Homework_1.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyMoWd3ZZkODmH5vE0u6fMZ8",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/msmoleres/ELEC-380/blob/main/Homework_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": 153,
@@ -555,9 +567,9 @@
           "height": 428
         },
         "id": "LTJeo3i4AJJV",
-        "outputId": "b41b7be5-eeed-4288-d207-b698b0dd404a"
+        "outputId": "56055125-31e5-462f-8676-0e5ca42619ef"
       },
-      "execution_count": 165,
+      "execution_count": 175,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -567,7 +579,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 165
+          "execution_count": 175
         },
         {
           "output_type": "display_data",
